--- a/deployment/buildspec.yml
+++ b/deployment/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Login in to AWS ECR
       - aws --version
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_REPO_URI
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin $ECR_REPO_URI
       - |
         if [ "$ENV_TYPE" = "prod" ]; then
           REPOSITORY_URI=$REPOSITORY_URI_PROD
